<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/paintFrame"
    tools:context="com.example.maxim.algorithmviewer.activities.ActivityLab8">
    <com.example.maxim.algorithmviewer.model.CanvasField
        android:id="@+id/paintPlace"
        app:isOriented = "false"
        app:isWeightsEnabled = "true"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="match_parent" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF0000FF" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_weight="8"
        android:layout_gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/showLogButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="showLogButtonClick"
                android:text="@string/showLogButtonName" />

            <Button
                android:id="@+id/clearLogButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="clearLogButtonClick"
                android:text="@string/clearLogButtonName" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="startButtonClick"
                android:text="@string/startButtonText" />

            <Button
                android:id="@+id/clearFieldButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="clearFieldButtonClick"
                android:text="@string/clearFieldString" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>